test/files/neg/no-string-plus-2.scala
package p

import scala.language.future.noStringPlus

object Test {
  val b = "abc" + true
}
